# learn_wgpu

./: .gitignore  Cargo.toml
assets/shaders/: shader.wgsl
src/: main.rs  state.rs
src/state/: mod.rs
