[package]
name = "learn_wgpu"
version = "0.1.0"
authors = ["Luo Zhipeng <holyfight6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
env_logger = "0.8"
futures = "0.3"
image = "0.23"
log = "0.4"
shaderc = "0.7"
winit = "0.24"

[dependencies.wgpu]
version = "0.6"
features = ["vulkan-portability"]
