[package]
name = "wgpu_toutorial"
version = "0.1.0"
authors = ["LuoZhipeng <holyfight6@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
env_logger = "0.8.3"
futures = "0.3.15"
image = "0.23.14"
log = "0.4.14"
shaderc = "0.7.2"
winit = "0.25.0"
wgpu = "0.8.1"
